tests/neg/parser-stability-3.scala
object x0 {
def x0(x1: x2 = 0, x1 x3) x4 = // error // error // error
x5 x6 x7[x8[x9 x2]] = x0
val x10 = x0( )  // error
// error